--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.MyfirstApplication">
         <activity
             android:name=".DisplayDropdownActivity"
-            android:exported="false" />
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".displaySliderActivity"
             android:parentActivityName=".MainActivity" />
